patch per evitar procés que acumulatiu del SO quan es fa un backup. Evitar fer backup si no es troba nom de db. (path per ICONO)